# src/configs/swagger.json
@@ -25,7 +25,7 @@
     "http"
   ],
   "paths": {
-    "api/patients": {
+    "/api/patients": {
       "post": {
         "tags": ["Patients"],
         "summary": "Add a new patient",
@@ -49,7 +49,7 @@
         }
       }
     },
-    "/api/patients/{status}": {
+    "/api/patients/status/{status}": {
       "get": {
         "tags": ["Patients"],
         "summary": "Find patients by status",
